Fixed illustration overflow.

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -13,12 +13,12 @@ header {
 }
 
 .illustration {
-    width: 2036px;
+    background-image: url("../images/illustration.png");
+    width: 100%;
     height: 971.2px;
-    background-color: blue;
-    position: relative;
-    left: 50%;
-    margin-left: -1018px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    overflow-x: hidden;
 }
 
 .content {
